tests/ui/parser/deli-ident-issue-2.rs
fn main() {
    if 1 < 2 {
        let _a = vec!];
    }
} //~ ERROR unexpected closing delimiter

fn main() {}
